Fix clipping on .statNumber

--- a/css/main.css
+++ b/css/main.css
@@ -735,6 +735,7 @@ p {
   text-align: center;
   padding: 0.75rem 0.75rem 0.75rem 0.75rem;
   width: 3.25rem;
+  min-width: 3.25rem;
   margin-bottom: 4rem;
   background-color: #ca87a1;
   clip-path: circle(farthest-side);
